# diantenjeom

./: .gitignore  .npmignore  LICENSE  README.md  article.html  demo-segment.html  demo.html  ko.html  main.css  new-article.html  package.json  pyproject.toml
.github/workflows/: ci.yml  pages.yml  release.yml
demo/: article.css  article.html  article.js  cff2-vs-glyf.html  demo-sc-quotes.html  demo.html  diantenjeom.css  index.html  ja.html  ko.html  main.css  og.html  pair-span-squeeze.html  prefs.js  squeeze-matrix.html
docs/: TODO.md  build.md  chrome-pair-squeeze.md  chromium-bug-report-draft.md  glyf-lsb-positioning-fix.md  locale-segment-postmortem.md  pair-squeeze-and-markup.md  vertical-text.md
docs/notes/: safari-vertical-cff2-advance.md
docs/plans/: chws-feature.md  diantenjeom-split.md  gb-sc-trim-fix.md  gb-sc.md  serif-jp.md  split-locl-align.md  split-rework.md
scripts/: build_binomoto.py  build_fonts.py  build_locale.py  build_segment.py  check_squeeze.py  fetch_sources.py  measure_cff2_glyf.py
sources/: sources.lock.json
src/diantenjeom/: _outline.py  align_locl.py  bake_vpal.py  build.py  center_punct.py  circle.py  codepoints.py  dash_center.py  ellipsis_pair.py  fetch.py  gpos_graft.py  graft.py  locale_variants.py  middle_dot.py  pin_locale.py  rotate_quotes.py  segment_variants.py  to_glyf.py  vert_nudge.py  vert_pair_squeeze.py  vert_subst.py
tests/: squeeze-snapshot.json  test_build.py
